# serverless-scheduler

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  monitor.py  package-lock.json  package.json  requirements.txt  serverless.yml
.github/: dependabot.yml
.github/workflows/: build-and-test-python.yml  docker-publish-checker.yml  docker-publish-comparator.yml  docker-publish-front.yml  docker-publish-manager.yml  docker-publish-screenshoter.yml  docker-publish-sender.yml  docker-publish.yml  flow.yml  helm-publish.yml  package-component.yml  pre-commit.yml  publish-production.yml  publish.yml  pytest.yml  rebase.yml  single-docker-publish.yml  tests.yml
aws-serverless/: .gitignore  README.md  create_schemas.sh  deploy.sh  handler.py  items.py  login.py  package-lock.json  package.json  requirements.txt  serverless.yml  teardown.sh  user-config.yml
aws-serverless/common/: schemas.py  utils.py  utils_test.py
aws-serverless/items/: create.py  delete.py  get.py  items.py  update.py
aws-serverless/resources/: cloudfront.yml  cognito-user-pool.yml  dynamodb.yml  front-bucket.yml  s3-front-bucket.yml
aws-serverless/swagger/: db_schema.md  swagger.yaml
aws-serverless/utils/: json2py.py  teardown.sh
checker/: Dockerfile  README.md  monitor.py  requirements.in  requirements.txt  requirements_test.in  requirements_test.txt
common/: .dockerignore  Dockerfile  README.md  cognito.py  pyproject.toml  requirements.txt  schemas.py  utils.py  utils_test.py
common/common/: cognito.py  json_schemas.py  utils.py
common/common/models/: __init__.py  html_monitor_job.py  job_type.py  scheduled_job.py
common/common/models/events/: __init__.py  scheduler_change_event.py  scheduler_change_type.py
common/common/models/jobs/: __init__.py  base_job.py  html_monitor_job.py  job_type.py  plugins.py  scheduled_job.py  utils.py
common/common/models/plugins/: __init__.py  plugins.py
common/serverless-scheduler-test-plugin/models/: test_job.py
common/serverless-scheduler-test-plugin/plugin_export/: __init__.py
common/serverless_scheduler_test_plugin/plugin_export/: __init__.py
common/tests/: conftest.py  utils_test.py
common/tests/models/: html_monitor_job_test.py  scheduled_job_test.py
common/tests/models/events/: scheduler_change_event_test.py
common/tests/models/jobs/: base_job_test.py  html_monitor_job_test.py  scheduled_job_test.py  test_job_test.py  utils_test.py
comparator/: Dockerfile  Dockerfile.deps  requirements.in  requirements.txt  requirements_test.txt  setup.py  uwsgi.ini
comparator/swagger_server/: __init__.py  __main__.py
config/: .gitignore
config/auto/: core-global.tfvars.json  plugins-serverless-scheduler-html-checker-secret-values.tfvars.example
config/dev/: plugins-serverless-scheduler-html-checker-secret-values.tfvars.example
config/dev-tgrunt/: .gitignore  env.hcl  helpers_env.hcl  terragrunt.hcl
config/prod/: core-global.tfvars.json  plugins-lambda-layer-upload.tfvars.json
front/: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  build.sh  env.sh  nginx.conf  package-lock.json  package.json  prepare-dist
handler-demo/: handler.py  requirements.txt
items/: .dockerignore  README.md  conftest.py  create.py  create_test.py  delete.py  event.json  functions.yml  get.py  models.py  pyproject.toml  requirements.txt  schemas.py  schemas_test.py  swagger.yaml  update.py
items/items/: copier.py  create.py  delete.py  get.py  job_types.py  json_schemas.py  models.py  schedule_queue.py  schemas.py  update.py  utils.py
items/items/libs/: lambda_decorators.py
items/tests/: conftest.py  create_test.py  delete_test.py  get_test.py  job_types_test.py  models_test.py  schedule_queue_test.py  schemas_test.py  update_test.py  utils_test.py
k8s/: .gitignore  README.md  checker.yaml  comparator-service.yaml  comparator.yaml  deployment.yaml  front-ingress.yaml  front-service.yaml  front.yaml  manager-ingress.yaml  manager-service.yaml  manager.yaml  namespace.yaml  postgres.yaml  rbac.yaml  screenshoter-service.yaml  screenshoter.yaml  sender-service.yaml  sender.yaml
login/: README.md  functions.yml  login.py  pyproject.toml
login/login/: login.py
login/tests/: test_dummy.py
manager/: .gitignore  Dockerfile  Makefile  README.md  go.mod  go.sum  main.go
plugins-interface/: .dockerignore  README.md  pyproject.toml
resources/: cloudfront.yml  cognito-user-pool.yml  dynamodb.yml
schedulers/: .dockerignore  README.md  pyproject.toml
schedulers/schedulers/: schedule_controller.py  scheduler_manager.py
schedulers/tests/: conftest.py  scheduler_manager_test.py  test_dummy.py
screenshoter/: Dockerfile  Dockerfile_test.deps  Makefile  README.md  index.js  package-lock.json  package.json  requirements.in  requirements.txt  requirements_test.in  requirements_test.txt  setup.py  swagger.yaml
sender/: Dockerfile  Makefile  README.md  nginx.conf  requirements.in  requirements.txt  requirements_test.txt  setup.py  start.sh  uwsgi.ini
serverless/: package-lock.json  serverless.yml
serverless-scheduler-plugin-example/: pyproject.toml
serverless-scheduler-plugin-example-api/: pyproject.toml
serverless-scheduler-plugin-example-api/serverless_scheduler_plugin_example_api/models/: test_job.py
serverless-scheduler-plugin-example-api/serverless_scheduler_plugin_example_api/plugin_export/: __init__.py
serverless-scheduler-plugin-example/serverless_scheduler_plugin_example/models/: test_job.py
serverless-scheduler-plugin-example/serverless_scheduler_plugin_example/plugin_export/: __init__.py
swagger/: db_schema.md  swagger.yaml
terraform/: .gitignore  api-gateway.tf  certificates.tf  cloudfront.tf  cognito-dev-user.tf  cognito.tf  front-bucket.tf  locals.tf  outputs.tf  providers.tf  terraform.tfvars.json  variables.tf
utils/: build.sh  complete_build.sh  complete_deploy.sh  complete_teardown.sh  create_schemas.sh  deploy.sh  deploy_lib.sh  deploy_lib_hooks.sh  json2py.py  package_lambdas_zips.sh  teardown.sh  test_diagrams_are_up_to_date.sh  test_json_schemas_updated.sh
(+248 files in other folders)
