[tool.poetry]
name = "common"
version = "0.1.0"
description = "Common utils used in Lambdas"
authors = ["dezeroku <dezeroku@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.24.43"
boto3-stubs = {extras = ["dynamodb"], version = "^1.26.64"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = {extras = ["toml"], version = "^6.4.2"}

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.9"

[tool.coverage.run]
omit = ["tests*"]

[tool.pylint.'MESSAGES CONTROL']
# Ignore the docstring warnings
disable = 'C0114,C0115,C0116'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true
