[tool.poetry]
name = "common"
version = "0.1.0"
description = "Common utils used in Lambdas"
authors = ["dezeroku <dezeroku@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.4"
boto3 = "^1.24.43"
boto3-stubs = {extras = ["dynamodb"], version = "^1.26.64"}
email-validator = "^1.3.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = {extras = ["toml"], version = "^6.4.2"}

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.9"
hypothesis = "^6.68.2"

[tool.coverage.run]
omit = ["tests*"]

[tool.pylint.MASTER]
py-version = "3.8"
extension-pkg-whitelist = "pydantic"
load-plugins = [
  "pylint.extensions.code_style",
  "pylint.extensions.typing",
]

[tool.pylint.'MESSAGES CONTROL']
disable = 'missing-module-docstring,missing-class-docstring,missing-function-docstring,too-few-public-methods,fixme'

[tool.mypy]
plugins = "pydantic.mypy"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true
