[tool.poetry]
name = "items"
version = "0.1.0"
description = "Lambda REST API for managing monitor jobs"
authors = ["dezeroku <dezeroku@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
lambda-decorators = "^0.6.0"
jsonschema = "^4.7.2"
pydantic = "^1.10.4"
boto3-stubs = {extras = ["dynamodb", "sqs"], version = "^1.26.64"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
moto = "^3.1.16"
hypothesis = "^6.52.3"
coverage = {extras = ["toml"], version = "^6.4.2"}
common = { path = "../common/", develop = true }

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.9"

[tool.coverage.run]
omit = ["*tests*", "*common*"]

[tool.pylint.MASTER]
py-version = "3.9"
extension-pkg-whitelist = "pydantic"
load-plugins = [
  "pylint.extensions.code_style",
  "pylint.extensions.typing",
]

[tool.pylint.'MESSAGES CONTROL']
disable = 'missing-module-docstring,missing-class-docstring,missing-function-docstring,too-few-public-methods,fixme'

[tool.pylint.design]
max-args = 8

[tool.mypy]
plugins = "pydantic.mypy"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true
