[tool.poetry]
name = "items"
version = "0.1.0"
description = "Lambda REST API for managing monitor jobs"
authors = ["dezeroku <dezeroku@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jsonschema = "^4.7.2"
# https://github.com/dschep/lambda-decorators is copied directly
# This is done that way because `lambda-decorators` explicitly define
# dependency on boto3, which we want to get from a Lambda layer (via
# `common` package) and not specify here

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
coverage = {extras = ["toml"], version = "^6.4.2"}
pylint = "^2.15.9"
hypothesis = "^6.52.3"
moto = "^3.1.16"
boto3-stubs = {extras = ["dynamodb", "sqs"], version = "^1.26.64"}
boto3 = "^1.26.80"
common = { path = "../common/", develop = true }
serverless-scheduler-plugin-example = { path = "../serverless-scheduler-plugin-example", develop = true }

[tool.coverage.run]
omit = ["*tests*", "*common*"]

[tool.pylint.MASTER]
py-version = "3.9"
extension-pkg-whitelist = "pydantic"
load-plugins = [
  "pylint.extensions.code_style",
  "pylint.extensions.typing",
]
ignore-patterns = '.*lambda_decorators\.py'

[tool.pylint.'MESSAGES CONTROL']
disable = 'missing-module-docstring,missing-class-docstring,missing-function-docstring,too-few-public-methods,fixme'

[tool.pylint.design]
max-args = 8

[tool.mypy]
plugins = "pydantic.mypy"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true
