[tool.poetry]
name = "schedulers"
version = "0.1.0"
description = "DynamoDB streams based jobs scheduler"
authors = ["dezeroku <dezeroku@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
common = { path = "../common/", develop = false }

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
moto = "^3.1.16"
hypothesis = "^6.52.3"
coverage = {extras = ["toml"], version = "^6.4.2"}

[tool.pytest.ini_options]
norecursedirs = "common"

[tool.coverage.run]
omit = ["*common*", "tests*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true
