[tool.poetry]
name = "schedulers"
version = "0.1.0"
description = "DynamoDB streams based jobs scheduler"
authors = ["dezeroku <dezeroku@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
common = { path = "../common/", develop = true }

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
moto = "^3.1.16"
hypothesis = "^6.52.3"
coverage = {extras = ["toml"], version = "^6.4.2"}

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.9"

[tool.coverage.run]
omit = ["tests*"]

[tool.pylint.'MESSAGES CONTROL']
# Ignore the docstring warnings
disable = 'C0114,C0115,C0116'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true
