[tool.poetry]
name = "schedulers"
version = "0.1.0"
description = "EventBridge Schedulers controller"
authors = ["dezeroku <dezeroku@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
hypothesis = "^6.52.3"
coverage = {extras = ["toml"], version = "^6.4.2"}
common = { path = "../common/", develop = true }
boto3-stubs = {extras = ["scheduler"], version = "^1.26.64"}

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.9"
boto3 = "^1.26.80"

[tool.coverage.run]
omit = ["*tests*", "*common*"]

[tool.pylint.MASTER]
py-version = "3.9"
extension-pkg-whitelist = "pydantic"
load-plugins = [
  "pylint.extensions.code_style",
  "pylint.extensions.typing",
]

[tool.pylint.'MESSAGES CONTROL']
disable = 'missing-module-docstring,missing-class-docstring,missing-function-docstring,too-few-public-methods,fixme'

[tool.pylint.design]
max-args = 8

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = "pydantic.mypy"

[virtualenvs]
create = true
in-project = true
