[tool.poetry]
name = "serverless-scheduler-plugin-example-api"
version = "0.1.0"
description = "Reference implementation of a plugin API for serverless-scheduler"
authors = ["dezeroku <dezeroku@gmail.com>"]
readme = "README.md"
packages = [{include = "serverless_scheduler_plugin_example_api"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
common = { path = "../common/", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
